v0.9.5

* [BGBUILD-294] Package aws-sdk 1.1.1 and update dependency
* [BGBUILD-277] When delivering as AMI, the EC2 region should match S3 bucket's region (location constraint)
* [BGBUILD-297] Cannot create EBS appliances when using overwrite parameter

v0.9.4

* [BGBUILD-263] NoMethodError: undefined method `item' for nil:NilClass while creating EBS appliance
* [BGBUILD-246] Detect when insufficient system memory is available for standard libguestfs, and reduce allocation.
* [BGBUILD-269] RPM database is recreated after post section execution preventing installing RPM in post section
* [BGBUILD-273] Move to RSpec2
* [BGBUILD-272] Move from aws and amazon-ec2 to official aws-sdk gem
* [BGBUILD-238] Stop AWS gem warnings
* [BGBUILD-265] Resolve concurrency issues in S3 plugin for overwriting
* [BGBUILD-249] Warning from S3 AMI plugin that BG is attempting to create a bucket that already exists
* [BGBUILD-242]	Additional EBS overwrite edge cases

v0.9.3

* [BGBUILD-232] boxgrinder doesn't validate config early enough
* [BGBUILD-237] Tilde characters break creation of yum.conf
* [BGBUILD-223] BoxGrinder hangs because qemu.wrapper does not detect x86_64 properly on CentOS 5.6
* [BGBUILD-241] Add Scientific Linux support
* [BGBUILD-220] Group names have spaces (to the user), this breaks schema rules for packages
* [BGBUILD-222] Allow overwrite of uploaded ec2 image
* [BGBUILD-225] Move PAE configuration parameter to operating system configuration
* [BGBUILD-224] EBS Plugin Support for CentOS v5.5 and fix for non-integer EBS disk sizes
* [BGBUILD-231] Cannot register Fedora 15 EC2 AMI with S3 delivery plugin in eu-west-1 availability zone
* [BGBUILD-193] EBS delivery plugin timing/concurrency issues
* [BGBUILD-247] ap-northeast-1 end-point is missing in S3 plugin (added Tokyo region)
* [BGBUILD-251] Add ap-northeast-1 (tokyo) region for EBS plugin
* [BGBUILD-248] Throw error in S3 plugin if invalid region is specified