@@ -87,6 +87,43 @@ module BoxGrinder
       @plugin.normalize_packages(packages)
       packages.should == ["@core", "system-config-firewall-base", "dhclient", "kernel"]
     end
+
+    context "BGBUILD-204" do
+      it "should disable bios device name hints for GRUB legacy" do
+        guestfs = mock("GuestFS")
+        guestfs.should_receive(:exists).with("/boot/grub2/grub.cfg").and_return(0)
+        guestfs.should_receive(:exists).with("/boot/grub/grub.cfg").and_return(1)
+        guestfs.should_receive(:sh).with("sed -i \"s/kernel\\(.*\\)/kernel\\1 biosdevname=0/g\" /boot/grub/grub.conf")
+        @plugin.disable_biosdevname(guestfs)
+      end
+
+      it "should disable bios device name hints for GRUB2" do
+        guestfs = mock("GuestFS")
+        guestfs.should_receive(:exists).with("/boot/grub2/grub.cfg").and_return(1)
+        guestfs.should_receive(:exists).with("/boot/grub/grub.cfg").and_return(0)
+        guestfs.should_receive(:write).with("/etc/default/grub", "GRUB_CMDLINE_LINUX=\"quiet rhgb biosdevname=0\"\n")
+        @plugin.disable_biosdevname(guestfs)
+      end
+
+      it "should change to runlevel 3 by default" do
+        guestfs = mock("GuestFS")
+        guestfs.should_receive(:rm).with("/etc/systemd/system/default.target")
+        guestfs.should_receive(:ln_sf).with("/lib/systemd/system/multi-user.target", "/etc/systemd/system/default.target")
+        @plugin.change_runlevel(guestfs)
+      end
+
+      it "should disable netfs" do
+        guestfs = mock("GuestFS")
+        guestfs.should_receive(:sh).with("chkconfig netfs off")
+        @plugin.disable_netfs(guestfs)
+      end
+    end
+
+    it "should link /etc/mtab to /proc/self/mounts" do
+      guestfs = mock("GuestFS")
+      guestfs.should_receive(:ln_sf).with("/proc/self/mounts", "/etc/mtab")
+      @plugin.link_mtab(guestfs)
+    end
   end
 end
 
